--- a/Frontend/public/assets/css/core_fascie.css
+++ b/Frontend/public/assets/css/core_fascie.css
@@ -13,7 +13,7 @@
     left: 50%;
     transform: translateX(-50%);
     width: 100%;
-    max-width: 48rem;
+    max-width: 1000px;
     z-index: 50;
     display: flex;
     align-items: center;
@@ -48,7 +48,7 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    max-width: 48rem;
+    max-width: 1000px;
     margin: 0 auto;
     gap: 0.5rem;
 }
